load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "main.go",
        "server.go",
    ],
    importpath = "github.com/orangesys/orangeapi/cmd/orangeapi",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/server:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "orangeapi",
    embed = [":go_default_library"],
    importpath = "github.com/orangesys/orangeapi/cmd/orangeapi",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    importpath = "github.com/orangesys/orangeapi/cmd/orangeapi",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

# push container to ecr
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
)

container_push(
  name = "publish",

  format = "Docker",

  # Any of these components may have variables.
  registry = "index.docker.io",
  repository = "orangesys/alpine-orangeapi",
  tag = "${VERSION}",

  # Trigger stamping.
  stamp = True,
)
