load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "main.go",
        "server.go",
    ],
    importpath = "github.com/orangesys/orangeapi/cmd/orangeapi",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/server:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "orangeapi",
    embed = [":go_default_library"],
    importpath = "github.com/orangesys/orangeapi/cmd/orangeapi",
    visibility = ["//visibility:public"],
    pure = "on",
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    importpath = "github.com/orangesys/orangeapi/cmd/orangeapi",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
    pure = "on",
)

# push container to ecr
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
    "container_bundle",
)

container_push(
  name = "publish",
  format = "Docker",
  image = ":image",
  # Any of these components may have variables.
  registry = "index.docker.io",
  repository = "orangesys/orangeapi",
  tag = "${STABLE_BUILD_GIT_TAG}",

  # Trigger stamping.
  stamp = True,
)

container_bundle(
    name = "bundle_to_push",
    images = {
        "asia.gcr.io/saas-orangesys-io/orangeapi:{STABLE_BUILD_GIT_TAG}": ":image",
        "asia.gcr.io/saas-orangesys-io/orangeapi:latest": ":image",
    },
    stamp = True,
)

load(
    "@io_bazel_rules_docker//contrib:push-all.bzl",
    docker_pushall = "docker_push",
)

docker_pushall(
    name = "push_bundle",
    bundle = ":bundle_to_push",
)
