load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["firebase.go"],
    importpath = "github.com/orangesys/orangeapi/pkg/firebase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "@com_github_JustinTulloss_firebase//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["firebase_test.go"],
    importpath = "github.com/orangesys/orangeapi/pkg/firebase",
    library = ":go_default_library",
    deps = ["//pkg/config:go_default_library"],
)
