load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/orangesys/orangeapi/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/storage:go_default_library",
        "@com_github_labstack_echo//:go_default_library",
        "@com_github_labstack_echo//middleware:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/orangesys/orangeapi/pkg/server",
    deps = ["@com_github_labstack_echo//:go_default_library"],
)
