load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/orangesys/orangeapi/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_influxdata_influxdb//client/v2:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    importpath = "github.com/orangesys/orangeapi/pkg/storage",
    library = ":go_default_library",
    deps = ["@com_github_influxdata_influxdb//client/v2:go_default_library"],
)
